--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         id="activityType"
         class="mb-4 w-full p-2 border border-gray-300 rounded-lg bg-green-800 text-white"
       >
+        <option value="">Not applicable</option>
         <option value="QUIZ 1">QUIZ 1</option>
         <option value="QUIZ 2">QUIZ 2</option>
         <option value="QUIZ 3">QUIZ 3</option>
@@ -331,7 +332,9 @@
           const fixedName = document.createElement("span");
           const subject = document.getElementById("subjectInput").value.trim();
           const test = document.getElementById("activityType").value;
-          fixedName.innerText = "SANTIAGO, FHRIANE G_"+ test + "_" + subject;
+          fixedName.innerText = test
+  ? "SANTIAGO, FHRIANE G_" + test + "_" + subject
+  : "SANTIAGO, FHRIANE G_" + subject;
           fixedName.className = "text-end p-2 italic font-bold";
 
           // Editable part
@@ -358,10 +361,12 @@
             const filenameDiv = document.createElement("div");
             filenameDiv.className = "flex gap-2 w-full";
 
-            const fixedName = document.createElement("span");
+          const fixedName = document.createElement("span");
           const subject = document.getElementById("subjectInput").value.trim();
           const test = document.getElementById("activityType").value;
-          fixedName.innerText = "SANTIAGO, FHRIANE G_"+ test + "_" + subject;
+          fixedName.innerText = test
+  ? "SANTIAGO, FHRIANE G_" + test + "_" + subject
+  : "SANTIAGO, FHRIANE G_" + subject;
             fixedName.className = "text-end p-2 italic font-bold";
 
             const input = document.createElement("input");
